# bible-reader

./: .envrc  .gitignore  CHANGELOG.md  LICENSE  PROJECT_SPEC.md  README.md  pyproject.toml
docs/: DATA_SOURCES.md  DEV_ENVIRONMENT.md  INSTALL.md  SMOKE_TEST.md  STAGES.md  TUI_PLAN.md  VERSIONING.md  WORKFLOW.md
src/bible_reader/: __init__.py  __main__.py  asv_sources.py  cli.py  default_data.py  importers.py  models.py  references.py  render.py  repository.py  search.py  storage.py  study.py  tui.py
src/bible_reader/data/: __init__.py  asv_sample_bundle.json
tests/: conftest.py  test_asv_sources.py  test_cli.py  test_comparison.py  test_default_data.py  test_dev_environment_docs.py  test_importers.py  test_references.py  test_release_docs.py  test_render.py  test_repository.py  test_search.py  test_search_render.py  test_study.py  test_tui.py
tests/fixtures/: asv_sample_bundle.json  asv_tiny.usfx
